force-app/main/default/objects/Game__c/fields/Clock__c.field-meta.xml
<CustomField>
    <fullName>Clock__c</fullName>
    <description>Clock Time</description>
    <formula>TEXT(Clock_Minute__c) &amp; &quot;:&quot; &amp; LPAD(TEXT(Clock_Second__c), 2, &#39;0&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clock</label>
    <type>Text</type>
</CustomField>