force-app/main/default/objects/Game__c/fields/Clock_Minute__c.field-meta.xml
<CustomField>
    <fullName>Clock_Minute__c</fullName>
    <label>Clock Minute</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>