force-app/main/default/objects/Game__c/fields/Clock_Second__c.field-meta.xml
<CustomField>
    <fullName>Clock_Second__c</fullName>
    <label>Clock Second</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>