force-app/main/default/objects/Game__c/fields/Game_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Game_Date_and_Time__c</fullName>
    <label>Game Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>