force-app/main/default/objects/Game__c/fields/Loser_Name__c.field-meta.xml
<CustomField>
    <fullName>Loser_Name__c</fullName>
    <formula>Loser__r.Name__c</formula>
    <label>Loser Name</label>
    <type>Text</type>
</CustomField>