force-app/main/default/objects/Game__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>