force-app/main/default/objects/Game__c/fields/Player_1__c.field-meta.xml
<CustomField>
    <fullName>Player_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player 1</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Games as Player 1</relationshipLabel>
    <relationshipName>Games_as_Player_1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>