force-app/main/default/objects/Game__c/fields/Player_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_1_Name__c</fullName>
    <description>Player 1 Name</description>
    <formula>IMAGE( Player_1__r.Team__r.Icon_Link__c , Player_1__r.Name__c, 25, 25) + &quot; &quot; + Player_1__r.Name__c</formula>
    <label>Player 1 Name</label>
    <type>Text</type>
</CustomField>