force-app/main/default/objects/Game__c/fields/Player_1_Score__c.field-meta.xml
<CustomField>
    <fullName>Player_1_Score__c</fullName>
    <label>Player 1 Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>