force-app/main/default/objects/Game__c/fields/Player_1_Score_Short_Label__c.field-meta.xml
<CustomField>
    <fullName>Player_1_Score_Short_Label__c</fullName>
    <description>Player 1 Score - Short label for dashboard report.</description>
    <formula>Player_1_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>