force-app/main/default/objects/Game__c/fields/Player_2__c.field-meta.xml
<CustomField>
    <fullName>Player_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player 2</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Games as Player 2</relationshipLabel>
    <relationshipName>Games_as_Player_2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>