force-app/main/default/objects/Game__c/fields/Player_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_2_Name__c</fullName>
    <description>Player 2 Name</description>
    <formula>IMAGE( Player_2__r.Team__r.Icon_Link__c , Player_2__r.Name__c, 25, 25) + &quot; &quot; + Player_2__r.Name__c</formula>
    <label>Player 2 Name</label>
    <type>Text</type>
</CustomField>