force-app/main/default/objects/Game__c/fields/Tournament_Name__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Name__c</fullName>
    <description>Tournament Name</description>
    <formula>Tournament__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tournament Name</label>
    <type>Text</type>
</CustomField>