force-app/main/default/objects/Game__c/fields/Winner_Name__c.field-meta.xml
<CustomField>
    <fullName>Winner_Name__c</fullName>
    <formula>Winner__r.Name__c</formula>
    <label>Winner Name</label>
    <type>Text</type>
</CustomField>