force-app/main/default/objects/Game__c/fields/WNHC_Game_Id__c.field-meta.xml
<CustomField>
    <fullName>WNHC_Game_Id__c</fullName>
    <externalId>true</externalId>
    <label>WNHC Game Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>