force-app/main/default/objects/Game__c/validationRules/Clock_Second_Must_Be_0_To_59.validationRule-meta.xml
<ValidationRule>
    <fullName>Clock_Second_Must_Be_0_To_59</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL( Status__c , &quot;Scheduled&quot; )),
  OR( 
     Clock_Second__c  &lt; 0,
     Clock_Second__c &gt; 59,
     AND(Clock_Minute__c = 7, Clock_Second__c &lt;&gt; 0)
  )
)</errorConditionFormula>
    <errorMessage>Clock second must be 0 to 59.
Clock second must be 0 if clock minute is 7.</errorMessage>
</ValidationRule>