force-app/main/default/objects/Game__c/validationRules/Period_Must_Be_1_To_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Must_Be_1_To_4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL( Status__c , &quot;Scheduled&quot; )),
  OR( 
     Period__c &lt; 1,
     Period__c &gt; 4
  )
)</errorConditionFormula>
    <errorDisplayField>Period__c</errorDisplayField>
    <errorMessage>Period must be 1 to 4 (4 = OT/SO).</errorMessage>
</ValidationRule>