force-app/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tournament_Name__c</columns>
    <columns>Game_Date_and_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Player_1_Name__c</columns>
    <columns>Player_2_Score_Short_Label__c</columns>
    <columns>Player_2_Name__c</columns>
    <columns>Player_1_Score_Short_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>